// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should match snapshot and have correct element height & font-size based on small prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 1px solid #dddddd;
  border-radius: 5px;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  padding: 0 0.35rem;
  width: 100%;
}

<Component
  theme={
    Object {
      "black": "#111111",
      "grey": "#898989",
      "greyDark": "#777777",
      "greyDarker": "#595959",
      "greyDarkest": "#222",
      "greyLight": "#a5a5a5",
      "greyLighter": "#dddddd",
      "greyLightest": "#efefef",
      "main": "#214154",
      "mainDarken": "#08283B",
      "mainLighten": "#3B5B6E",
      "white": "#f6f6f6",
    }
  }
>
  <styled.div
    theme={
      Object {
        "black": "#111111",
        "grey": "#898989",
        "greyDark": "#777777",
        "greyDarker": "#595959",
        "greyDarkest": "#222",
        "greyLight": "#a5a5a5",
        "greyLighter": "#dddddd",
        "greyLightest": "#efefef",
        "main": "#214154",
        "mainDarken": "#08283B",
        "mainLighten": "#3B5B6E",
        "white": "#f6f6f6",
      }
    }
  >
    <div
      className="c0"
    >
      <styled.input
        theme={
          Object {
            "black": "#111111",
            "grey": "#898989",
            "greyDark": "#777777",
            "greyDarker": "#595959",
            "greyDarkest": "#222",
            "greyLight": "#a5a5a5",
            "greyLighter": "#dddddd",
            "greyLightest": "#efefef",
            "main": "#214154",
            "mainDarken": "#08283B",
            "mainLighten": "#3B5B6E",
            "white": "#f6f6f6",
          }
        }
      >
        <input
          className="c1"
        />
      </styled.input>
    </div>
  </styled.div>
</Component>
`;

exports[`<Input /> should match snapshot and have label and error element if passed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  border: 1px solid red;
  border-radius: 5px;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  padding: 0 0.35rem;
  width: 100%;
}

.c1 {
  font-size: 1rem;
  line-height: 2rem;
}

.c3 {
  color: red;
  font-size: 0.85rem;
  margin-top: 5px;
}

<Component
  error="Error 1"
  label="Label 1"
  theme={
    Object {
      "black": "#111111",
      "grey": "#898989",
      "greyDark": "#777777",
      "greyDarker": "#595959",
      "greyDarkest": "#222",
      "greyLight": "#a5a5a5",
      "greyLighter": "#dddddd",
      "greyLightest": "#efefef",
      "main": "#214154",
      "mainDarken": "#08283B",
      "mainLighten": "#3B5B6E",
      "white": "#f6f6f6",
    }
  }
>
  <styled.div
    theme={
      Object {
        "black": "#111111",
        "grey": "#898989",
        "greyDark": "#777777",
        "greyDarker": "#595959",
        "greyDarkest": "#222",
        "greyLight": "#a5a5a5",
        "greyLighter": "#dddddd",
        "greyLightest": "#efefef",
        "main": "#214154",
        "mainDarken": "#08283B",
        "mainLighten": "#3B5B6E",
        "white": "#f6f6f6",
      }
    }
  >
    <div
      className="c0"
    >
      <Component
        theme={
          Object {
            "black": "#111111",
            "grey": "#898989",
            "greyDark": "#777777",
            "greyDarker": "#595959",
            "greyDarkest": "#222",
            "greyLight": "#a5a5a5",
            "greyLighter": "#dddddd",
            "greyLightest": "#efefef",
            "main": "#214154",
            "mainDarken": "#08283B",
            "mainLighten": "#3B5B6E",
            "white": "#f6f6f6",
          }
        }
      >
        <styled.label
          theme={
            Object {
              "black": "#111111",
              "grey": "#898989",
              "greyDark": "#777777",
              "greyDarker": "#595959",
              "greyDarkest": "#222",
              "greyLight": "#a5a5a5",
              "greyLighter": "#dddddd",
              "greyLightest": "#efefef",
              "main": "#214154",
              "mainDarken": "#08283B",
              "mainLighten": "#3B5B6E",
              "white": "#f6f6f6",
            }
          }
        >
          <label
            className="c1"
          >
            Label 1
          </label>
        </styled.label>
      </Component>
      <styled.input
        error="Error 1"
        theme={
          Object {
            "black": "#111111",
            "grey": "#898989",
            "greyDark": "#777777",
            "greyDarker": "#595959",
            "greyDarkest": "#222",
            "greyLight": "#a5a5a5",
            "greyLighter": "#dddddd",
            "greyLightest": "#efefef",
            "main": "#214154",
            "mainDarken": "#08283B",
            "mainLighten": "#3B5B6E",
            "white": "#f6f6f6",
          }
        }
      >
        <input
          className="c2"
        />
      </styled.input>
      <styled.div>
        <div
          className="c3"
        >
          Error 1
        </div>
      </styled.div>
    </div>
  </styled.div>
</Component>
`;
